[backend] feat(chaining): test